# Jetson-PX4-interfacing

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: mavlink_interface.h
src/: mavlink_interface.cpp
